--- a/src/main/resources/META-INF/resources/css/transactionPage.css
+++ b/src/main/resources/META-INF/resources/css/transactionPage.css
@@ -1,30 +1,39 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
-    margin: 0;
+    margin: 3em;
     padding: 0;
 }
 
 .container {
-    width: 80%;
+    width: 100%;
     margin: auto;
     overflow: hidden;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
-
-h1, h2 {
-    text-align: center;
-}
-
-form {
+.transaction-container
+{
+    width: 90%;
     background: #fff;
     padding: 20px;
     margin: 20px 0;
     box-shadow: 0 0 10px #ccc;
 }
 
+h1, h2 {
+    text-align: center;
+}
+
+
 label {
     display: block;
     margin-bottom: 5px;
+}
+
+form
+{
+    padding: 1em;
 }
 
 input[type="text"],
@@ -43,6 +52,7 @@ button {
     background: #333;
     color: #fff;
     border: none;
+    cursor: pointer;
 }
 
 ul {
@@ -55,4 +65,27 @@ ul li {
     padding: 10px;
     margin: 5px 0;
     box-shadow: 0 0 5px #ccc;
+}
+
+#switch-fraudulen
+{
+    margin: 1em;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+#isFraudulent{
+    cursor: pointer;
+}
+
+label
+{
+    font-weight: bold;
+}
+.history-transaction-container{
+    display: grid;
+    grid-template-columns: 20% 80%;
+}
+#log-out
+{
+    width: 5em;
 }
