front con AWS como server

--- a/src/main/resources/META-INF/resources/css/transactionPage.css
+++ b/src/main/resources/META-INF/resources/css/transactionPage.css
@@ -54,6 +54,10 @@ button {
     border: none;
     cursor: pointer;
 }
+#submit-transaction
+{
+    margin-top: 2em;
+}
 
 ul {
     list-style: none;
